--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -938,8 +938,8 @@
     <view class="t-btnYes" bindtap="btnYes">确定</view>
   </view>
   <view class="floatBtn t-btnBackground flex">
-  <view class="t-btnLeft">确定</view>
-  <view class="t-btnRight"> 继续完善</view>
+    <view class="t-btnLeft">确定</view>
+    <view class="t-btnRight"> 继续完善</view>
   </view>
 </template>
 
@@ -1223,5 +1223,37 @@
     <label class="t-leftLine">——</label>
     <view class="t-nothingBottom">已经见底了</view>
     <label class="t-leftLine">——</label>
+  </view>
+</template>
+
+<!--项目店铺公共  -->
+<template name="shopProject">
+  <view class='outBox'>
+    <block wx:for="{{myProject}}" wx:key="{{index}}">
+      <view class='insideBox' data-id="{{item.project_id}}" hover-class='t-hoverColor' bindtap="detail">
+        <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+        <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+        <view class='flex industryBox'>
+          <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
+            <view class="allIndustry">{{industry.industry_name}}</view>
+          </block>
+        </view>
+        <view class='flex otherInfo'>
+          <view class="allProjectDetail flex " wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+            <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}} </view>
+            <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">· {{item.pro_finance_stock_after}}% </view>
+            <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}"> · {{item.pro_stage.stage_name}}</view>
+            <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">· {{item.pro_area.area_title}}</view>
+          </view>
+        </view>
+        <view class="star" catchtap="clickProject" data-id="{{item.project_id}}" wx:if="{{otherPerson == false}}" data-top="{{item.is_top}}" hover-class="t-hoverColor" hover-stop-propagation="true">
+          <image src="/img/btn-zhiding@2x.png" class="starPic" wx:if='{{item.is_top == 0}}'></image>
+          <image src="/img/btn-quxiao@2x.png" class="starPic" wx:if='{{item.is_top == 1}}'></image>
+        </view>
+        <view class="top" data-id="{{item.project_id}}" wx:if="{{otherPerson == true}}">
+          <image src="/img/img-tuijian@2x.png" class="topPic" wx:if="{{item.is_top == 1 }}"></image>
+        </view>
+      </view>
+    </block>
   </view>
 </template>
