--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -1,20 +1,20 @@
 <import src="/pages/Template/Template.wxml" />
-<view class="swiper-tab">
+<!-- <view class="swiper-tab">
   <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">精选</view>
   <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">最新</view>
-  <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">项目库</view>
-</view>
-<!--筛选和搜索  --> 
-<template is='search' data='{{SearchInit,hidden}}'></template>
+  <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">项目库</view> 
+</view> -->
+<!--筛选和搜索  -->
+<!-- <template is='search' data='{{SearchInit,hidden}}'></template> -->
 <!-- <template is='searchResult' data='{{SearchInit}}'></template>  -->
 <!--项目展示列表  -->
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:938rpx"  bindchange="bindChange">
-  <!--精选  -->
-  <swiper-item data-current='0'>
-    <!--项目展示  -->
-    <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'>
-      <!--banner轮播  -->
-      <swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true' indicator-dots='true' indicator-active-color='#ffffff' indicator-color='rgba(255,255, 255, .3)'>
+<!-- <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:938rpx"  bindchange="bindChange"> -->
+<!--精选  -->
+<!-- <swiper-item data-current='0'> -->
+<!--项目展示  -->
+<!-- <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'> -->
+<!--banner轮播  -->
+<!-- <swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true' indicator-dots='true' indicator-active-color='#ffffff' indicator-color='rgba(255,255, 255, .3)'>
         <block wx:for="{{imgUrls}}" wx:key='item'>
           <swiper-item>
             <image src="{{item}}" class="slide-image" data-index='{{index}}' bindtap='bannerLink' />
@@ -27,33 +27,33 @@
         <view class="searchLine"></view>
         <view class="classname">暂时没有符合该条件的项目</view>
       </view>
-    </scroll-view>
-    <!--空状态-->
-    <image class="empty" src="/img/empty.png" wx:if="{{myProject==''}}"></image>
-  </swiper-item>
-  <!--最新 -->
-  <swiper-item data-current='1'>
-    <!-- <template is='searchResult' data='{{SearchInit}}'></template> -->
-    <!--项目展示  -->
-    <scroll-view scroll-y="true" bindscrolltolower="loadMore2">
+    </scroll-view>  -->
+<!--空状态-->
+<!-- <image class="empty" src="/img/empty.png" wx:if="{{myProject==''}}"></image>
+  </swiper-item> -->
+<!-- 最新   -->
+<!-- <swiper-item data-current='1'> -->
+<!-- <template is='searchResult' data='{{SearchInit}}'></template> -->
+<!--项目展示  -->
+<!-- <scroll-view scroll-y="true" bindscrolltolower="loadMore2">
       <template is="selectProject" data="{{list:financingNeed,type:2,timeShow:true}}"></template>
       <view class="searchNothing" wx:if="{{financingNeed.length == 0}}">
         <view class="searchLine"></view>
         <view class="classname">暂时没有符合该条件的项目</view>
       </view>
-    </scroll-view>
-    <!--空状态-->
-    <view wx:if="{{financingNeed==''}}">
+    </scroll-view> -->
+<!--空状态-->
+<!-- <view wx:if="{{financingNeed==''}}">
       <image class="empty" src="/img/img-wujieguo@3x.png"></image>
     </view>
-  </swiper-item>
-  <!--项目库  -->
-  <swiper-item data-current='2'>
+  </swiper-item> -->
+<!--项目库  -->
+<!-- <swiper-item data-current='2'>
     <scroll-view scroll-y="true" style="height:100%;">
       <image class="xiangmu" src="{{imgUrls1}}"></image> 
     </scroll-view>
   </swiper-item>
-</swiper>
+</swiper>  -->
 <!--创建项目引导  -->
 <template is='createProject'></template>
 <!--错误提示  -->
@@ -72,3 +72,93 @@
     <view class="btn" hover-class='t-other-button-hover' bindtap="createProjectPc">扫一扫</view>
   </view>
 </view>
+
+<view class="searchBox"></view>
+<!--banner轮播  -->
+<swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true' indicator-dots='true' indicator-active-color='#ffffff' indicator-color='rgba(255,255, 255, .3)'>
+  <block wx:for="{{imgUrls}}" wx:key='item'>
+    <swiper-item>
+      <image src="{{item}}" class="slide-image" data-index='{{index}}' bindtap='bannerLink' />
+    </swiper-item>
+  </block>
+</swiper>
+
+<view class='jumpBox flex'>
+  <template is="jumpBlock" data="{{text:'投资机构',tapName:'',src:'/img/icon-touzijigou@2x.png'}}"></template>
+  <template is="jumpBlock" data="{{text:'投资人',tapName:'',src:'/img/icon-touziren@2x.png'}}"></template>
+  <template is="jumpBlock" data="{{text:'FA融资顾问',tapName:'',src:'/img/icon-FA@2x.png'}}"></template>
+  <template is="jumpBlock" data="{{text:'潜在投资方',tapName:'',src:'/img/icon-qianzai@2x.png'}}"></template>
+</view>
+
+<view class="selectProject">微天使FA精选项目</view>
+
+
+<block wx:for="{{slectProject}}" wx:key="{{index}}">
+  <view class="selectProjectBox" data-id="{{item.project_id}}" hover-class='t-hoverColor' bindtap="detail">
+    <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+    <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+    <view class='flex industryBox'>
+      <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
+        <view class="allIndustry">{{industry.industry_name}}</view>
+      </block>
+    </view>
+    <view class='flex otherInfo'>
+      <view class="allProjectDetail flex " wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+        <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}} </view>
+        <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">· {{item.pro_finance_stock_after}}% </view>
+        <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}"> · {{item.pro_stage.stage_name}}</view>
+        <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">· {{item.pro_area.area_title}}</view>
+      </view>
+    </view>
+    <view class="userInfo flex">
+      <image src="{{item.user.investor_logo_url}}" class="userPic" wx:if="{{item.user.investor_logo_url}}" />
+      <view class="userPicText flex " wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+      <view class="userInfoRight">
+        <view class='userName'>{{item.user.user_name}}</view>
+        <view class='userCompany'>
+          <label>{{item.user.user_career}}</label> ·
+          <label>{{item.user.user_company}}</label>
+        </view>
+      </view>
+    </view>
+    <view class='userLine'></view>
+    <view class="applyProjcet flex">
+      <image class="personNumPic" src='/img/icon-chakan@2x.png'></image>
+      <view class="personNum">188人</view>
+      <view class="t-interest flex">
+        <view class="appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
+        <view class="t-toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" hover-class='t-other-button-hover' hover-stop-propagation='true' catchtap="matchApply">申请查看</view>
+        <view class="refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
+        <view class="refuseToRead t-readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
+        <view wx:if="{{item.relationship_button == 5}}"></view>
+        <view class="t-toAccreditation" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
+      </view>
+    </view>
+  </view>
+</block>
+
+
+
+<view class="floatBtn">
+  <view class="t-accreditation flex">
+    <view>提交项目，加速融资</view>
+    <view class="t-btnToAccreditation" hover-class='t-createColor' bindtap="toCreateProject">马上创建</view>
+  </view>
+</view>
+
+
+
+
+
+
+
+
+
+
+
+<template name="jumpBlock">
+  <view class="jumpTo" bindtap='{{tapName}}'>
+    <image class='jumpImage' src='{{src}}'></image>
+    <view class='jumpToContent'>{{text}}</view>
+  </view>
+</template>
