--- a/Weitianshi/pages/my/my/my.wxss
+++ b/Weitianshi/pages/my/my/my.wxss
@@ -246,18 +246,17 @@ page {
 
 .user_down {
   background: white;
-  padding: 32rpx 64rpx;
+  padding: 40rpx 64rpx;
   margin-bottom: 32rpx;
 }
 
 .user_popularity, .user_attention, .user_potential {
   width: 120rpx;
-  background: #f2f2f2;
   height: 82rpx;
   text-align: center;
   margin-right: 132rpx;
-  font-size: 20rpx;
-  color: #666;
+  font-size: 36rpx;
+  color: #333;
   border-radius: 8rpx;
 }
 
@@ -279,22 +278,6 @@ page {
   left: 20%;
 }
 
-.popularity-Num, .attention-Num, .potential-Num {
-  font-size: 32rpx;
-  color: #333;
-  letter-spacing: 0;
-  margin-top: 2rpx;
-  line-height: 46rpx;
-  text-align: center;
-}
-
-.popularity-people {
-  font-size: 20rpx;
-  color: #666;
-  /*line-height: 60rpx;*/
-  text-align: center;
-}
-
 .attentionNum {
   left: 54%;
 }
@@ -303,10 +286,10 @@ page {
   margin-right: 0;
 }
 
-.downBox {
+/* .downBox {
   background: #fff;
   padding: 32rpx;
-}
+} */
 
 /*店铺的样式  */
 
@@ -315,9 +298,12 @@ page {
   border-radius: 4rpx;
   border: 1rpx solid #e6e6e6;
   margin-bottom: 22rpx;
-  width: 590rpx;
   padding: 24rpx;
   position: relative;
+}
+
+.user_project_frame:last-child {
+  margin-bottom: 0;
 }
 
 .pro_intro {
@@ -338,13 +324,14 @@ page {
   margin-top: 22rpx;
 }
 
+/* 
 .projectDetailType {
   border-radius: 4rpx;
   width: 48rpx;
   height: 32rpx;
   position: absolute;
   right: 24rpx;
-}
+} */
 
 /*成功案例  */
 
@@ -529,13 +516,6 @@ page {
   height: 100%;
 }
 
-.popularity-people {
-  font-size: 20rpx;
-  color: #666;
-  /*line-height: 60rpx;*/
-  text-align: center;
-}
-
 .popularityNum, .potentialNum, .attentionNum {
   font-size: 8px;
   color: #f44c4c;
@@ -551,15 +531,6 @@ page {
 
 .potentialNum {
   left: 88%;
-}
-
-.popularity-Num, .attention-Num, .potential-Num {
-  font-size: 32rpx;
-  color: #333;
-  letter-spacing: 0;
-  margin-top: 2rpx;
-  line-height: 46rpx;
-  text-align: center;
 }
 
 .IdentificationNum {
@@ -796,12 +767,12 @@ page {
   background: #f5f5f5;
   margin-left: 14rpx;
   border-radius: 4rpx;
-  width: 98rpx;
-  height: 36rpx;
   font-size: 20rpx;
   color: #999;
   text-align: center;
   line-height: 36rpx;
+  white-space: nowrap;
+  padding: 0 16rpx;
 }
 
 .personPic {
@@ -821,11 +792,10 @@ page {
 }
 
 .bottomPic {
-  background: #ccc;
-  width: 15px;
-  height: 14px;
-  border-radius: 100%;
+  width: 28rpx;
+  height: 28rpx;
   margin-right: 14rpx;
+  margin-top: 4rpx;
 }
 
 .personCompanyContent, .personTelephone, .personEmail {
@@ -833,6 +803,11 @@ page {
   color: #666;
   text-align: left;
   margin-bottom: 12rpx;
+  width: 448rpx;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .personEmail {
@@ -844,6 +819,9 @@ page {
   color: #3378e0;
   text-align: center;
   margin-left: 34rpx;
+  position: absolute;
+  right: 58rpx;
+  top: 226rpx;
 }
 
 /*联系icon  */
@@ -879,12 +857,14 @@ page {
   color: #333;
   line-height: 24rpx;
   text-align: left;
-  margin-bottom: 32rpx;
+  margin-bottom: 40rpx;
   font-weight: bold;
 }
-.shopBox{
+
+.shopBox {
   justify-content: space-between;
 }
+
 .personDesContent {
   font-size: 28rpx;
   color: #666;
@@ -897,4 +877,157 @@ page {
   font-size: 24rpx;
   color: #3378e0;
   text-align: right;
+}
+
+/*店铺  */
+
+.insideBox {
+  border: 0.5rpx solid #f0f0f0;
+  padding: 32rpx;
+  position: relative;
+  margin-bottom: 28rpx;
+}
+
+.insideBox:last-child {
+  margin-bottom: 0;
+}
+
+.outBox .describle {
+  font-size: 30rpx;
+  color: #333;
+  line-height: 42rpx;
+  text-align: left;
+  margin-bottom: 20rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  font-weight: bold;
+}
+
+.projectDetailType {
+  height: 92rpx;
+  width: 92rpx;
+  right: 0rpx;
+  top: 0rpx;
+  position: absolute;
+}
+
+.industryBox {
+  word-break: break-all;
+  flex-wrap: wrap;
+}
+
+.allIndustry {
+  background: #f5f5f5;
+  border-radius: 4rpx;
+  padding: 0 16rpx;
+  height: 50rpx;
+  font-size: 24rpx;
+  color: #666;
+  line-height: 50rpx;
+  text-align: center;
+  margin-right: 16rpx;
+  white-space: nowrap;
+  margin-bottom: 20rpx;
+}
+
+.otherInfo {
+  position: relative;
+}
+
+.allProjectDetail {
+  font-size: 26rpx;
+  color: #666;
+  line-height: 26rpx;
+  text-align: left;
+}
+
+.projectDetailLine {
+  color: #666;
+  font-size: 24rpx;
+  line-height: 32rpx;
+  text-align: left;
+  padding-left: 10rpx;
+}
+
+.projectDetailLine:first-child {
+  padding-left: 0;
+}
+
+.projectDetailLine:last-child {
+  border-right: none;
+}
+
+/*成功案例  */
+
+.successLeftTime, .successLeftTurn, .successProjcetName, .successRightArea {
+  font-size: 28rpx;
+  color: #666;
+  line-height: 40rpx;
+  text-align: left;
+  margin-bottom: 12rpx;
+  white-space: nowrap;
+}
+
+.successLeftTurn {
+  color: #f6a623;
+}
+
+.successProjcetName {
+  color: #333;
+  font-weight: bold;
+}
+
+.successPic {
+  width: 24rpx;
+  height: 24rpx;
+  position: absolute;
+  left: -13rpx;
+}
+
+.successRight {
+  padding-left: 24rpx;
+  border-left: 1rpx solid #e6e6e6;
+  position: relative;
+  margin-left: 48rpx;
+}
+.successProjcet:last-child .successRight{
+  border: none;
+}
+
+/*投资需求  */
+
+.requireTitle {
+  font-size: 28rpx;
+  color: #333;
+  letter-spacing: 0;
+  text-align: left;
+  margin-bottom: 24rpx;
+  font-weight: bold;
+}
+
+.requireBox {
+  margin-bottom: 20rpx;
+}
+
+.requireDes {
+  font-size: 28rpx;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 44rpx;
+}
+
+.popularity-people, .attention-people, .potential-content {
+  font-size: 24rpx;
+  color: #999;
+  text-align: center;
+}
+
+.popularity-Num, .attention-Num, .potential-Num {
+  font-size: 36rpx;
+  color: #333;
+  text-align: center;
+  margin-bottom: 4rpx;
 }
