--- a/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxml
+++ b/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxml
@@ -3,6 +3,57 @@
 
   <!--我的名片-->
   <template is="userInfo" data="{{user:user,blue:blue,count:count,text:'加他为人脉',show:0,IdentificationShow:2,playTime:1}}"></template>
+
+
+  <view style='background:white'>
+    <view class="contactIcon flex">
+      <view class="littleBox">
+        <image src="/img/iocn-weixin@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-maimai@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-zhihu@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-weibo@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-qq@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-linkedin@2x.png" class="messageIconStyle"></image>
+      </view>
+    </view>
+    <view class="contactLine"></view>
+    <view class="user_down flex">
+      <view class="user_popularity user_tips contacts-sentimentm" bindtap="popularity" hover-class='t-color'>
+        <view wx:if="{{user.user_popularity}}">{{user.user_popularity}}</view>
+        <label class="popularityNum" wx:if="{{count.user_view_new && show ==1}}">+{{count.user_view_new}}</label>
+        <label class="popularityNum" wx:if="{{count.user_view_new==0 || show ==0}}"></label>
+        <view wx:if="{{!user.user_popularity}}" class="popularity-Num">{{count.user_view_all}}</view>
+        <view class="popularity-people">浏览过</view>
+      </view>
+      <!--加我为人脉-->
+      <view class="user_attention user_tips contacts-requestm" bindtap="attention" hover-class='t-color'>
+        <view wx:if="{{user.user_attention}}">{{user.user_attention}}</view>
+        <label class="attentionNum" wx:if="{{count.user_followed_new && show ==1}}">+{{count.user_followed_new}}</label>
+        <label class="popularityNum" wx:if="{{count.user_followed_new==0 || show ==0}}"></label>
+        <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.user_followed_all}}
+        </view>
+        <view class="attention-people">Ta的好友</view>
+      </view>
+      <!-- 潜在项目 -->
+      <view class="user_potential user_tips potential-projectm" bindtap="pushTo" hover-class='t-color'>
+        <view wx:if="{{user.user_potential}}">{{user.user_potential}}</view>
+        <label class="potentialNum" wx:if="{{count.project_push_new && show == 1}}">+{{count.project_push_new}}</label>
+        <label class="popularityNum" wx:if="{{count.project_push_new==0 || show ==0}}"></label>
+        <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.project_push_all}}</view>
+        <view class="potential-content">收到项目</view>
+      </view>
+    </view>
+  </view>
   <view class="downBox">
     <!--个人描述-->
     <template is="userIntro" data="{{user:user}}"></template>
@@ -17,14 +68,12 @@
     <template is="InvestInfo" data="{{invest:invest}}"></template>
 
     <!--资源需求-->
-    <template is="resourceInfo" data="{{resource:resource}}"></template>
-
-
+    <!-- <template is="resourceInfo" data="{{resource:resource}}"></template> -->
     <view style="height:88rpx;"></view>
   </view>
   <!--加人脉按钮-->
   <!-- button_type==0  0申请加人脉按钮，1不显示任何按钮  2待验证   3同意加为人脉  4加为单方人脉 -->
-  <view class="floatBtn flex addPerson" wx:if="{{button_type==0||button_type==3||button_type == 4}}">
+  <!-- <view class="floatBtn flex addPerson" wx:if="{{button_type==0||button_type==3||button_type == 4}}">
     <view class="flex pushProjectBox" hover-class='t-other-button-hover'>
       <image src="/img/icon-tuisong-w@2x.png" class="iconStyle"></image>
       <view class="pushProjectTo pushprojectm" bindtap="pushProjectTo">推送项目</view>
@@ -34,9 +83,9 @@
       <image src="/img/icon-jiarenmai-w@2x.png" class="iconStyle"></image>
       <view class="addPersonBtn add-contactsm" bindtap="addPerson">加人脉</view>
     </view>
-  </view>
+  </view> -->
   <!--button-type == 2 待验证状态  -->
-  <view class="floatBtn flex addPerson" wx:if="{{button_type==2}}">
+  <!-- <view class="floatBtn flex addPerson" wx:if="{{button_type==2}}">
     <view class="flex pushProjectBox" data-id="{{user.user_id}}" hover-class='t-other-button-hover'>
       <image src="/img/icon-tuisong-w@2x.png" class="iconStyle"></image>
       <view class="pushProjectTo pushprojectm" bindtap="pushProjectTo">推送项目</view>
@@ -50,7 +99,7 @@
   <view class="floatBtn flex pushPro" wx:if="{{button_type==1}}" data-id="{{user.user_id}}" hover-class='t-other-button-hover'>
     <image src="/img/icon-tuisong-w@2x.png" class="iconStyle"></image>
     <view class="pushProjectAfter pushprojectm" bindtap="pushProjectTo">推送项目</view>
-  </view>
+  </view> -->
   <!--错误提示  -->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 </view>
